--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -17,16 +17,17 @@
     "color--body": "#333333",
     "bg-color--button": "#333333",
     "color--swatches": "flamingo: flamingo.jpg\nTopless: topless.jpg\nSea Nymph: seanymph.jpg\ncandy apple: #e28a85\ndark cherry: #832d27\nmahogany: #9a5449\nmagma: #c23f5a\napricot: apricot.jpg\ndark sea green: #B9CCA1\nlight pink: #F8CCC6",
-    "typography--heading": "lora_n4",
+    "typography--heading": "libre_franklin_n7",
     "typography--heading--spacing": 0,
     "typography--heading--uppercase": false,
     "typography--banner--size": 84,
-    "typography--banner--mobile-size": 44,
+    "typography--banner--mobile-size": 31,
     "typography--featured--size": 52,
-    "typography--featured--mobile-size": 32,
+    "typography--featured--mobile-size": 29,
     "typography--section--size": 34,
-    "typography--section--mobile-size": 24,
-    "typography--nav": "montserrat_n4",
+    "typography--section--mobile-size": 20,
+    "typography--block--mobile-size": 20,
+    "typography--nav": "itc_franklin_gothic_n4",
     "typography--nav--size": 11,
     "typography--nav--uppercase": true,
     "typography--sub-nav--size": 11,
