--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -49,15 +49,18 @@
     "product--hover-image-enabled": true,
     "product--show-vendor": false,
     "product--show-rating": true,
-    "product--swatches": "circle",
+    "product--swatches": "square",
     "product--text-alignment": "center",
     "product--heading-type": "paragraph",
-    "product--label-shape": "round",
-    "product--label-color": "accent-1",
+    "product--label-shape": "square",
+    "product--label-color": "dark",
     "product--label-white-text": true,
     "product--show-sale-label": "show-percent",
+    "product--new-label-period": 20,
     "product--featured-tags": "Sustainable, Best seller ♥️, Most loved",
     "quick-add--variant-style": "buttons",
+    "favicon": "shopify://shop_images/favicon.png",
+    "social--instagram--url": "https://www.instagram.com/liberaiders",
     "preset": "beauty",
     "search-enabled": true,
     "content_for_index": []
